k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secflow-ns
  labels:
    app.kubernetes.io/name: secflow-ns
    app.kubernetes.io/part-of: codeswarm-service
